--- a/res/twig/pages/formats/carreras.twig
+++ b/res/twig/pages/formats/carreras.twig
@@ -1,71 +1,82 @@
 {% extends "base.twig" %}
 {% block content %}
-<blockquote>
-    <h1>
-        <i class="medium material-icons">directions_run</i>
-        Carreras
-    </h1>
-</blockquote>
-<div class="row">
-    <div class="col s12">
-        <ul class="tabs">
-            <li class="tab col s3">
-                <a class="active tooltipped" href="#list_carrera" data-position="top" data-tooltip="Muestra una lista con las carreras actuales">Lista</a>
-            </li>
-            <li class="tab col s3">
-                <a class="tooltipped" href="#add_carrera" data-position="top" data-tooltip="Añade más carreras a lista">Añadir</a>
-            </li>
-        </ul>
-    </div>
-    <div id="list_carrera" class="col s12">
-        <h4 class="cyan-text"><i class="material-icons left small">book</i>Lista de carreras</h4>
-        <hr/>
-        <table class="bordered responsive-table highlight">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nombre</th>
-                    <th>Creado el</th>
-                    <th>por</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for carrera in rec1.carreras.list %}
-                <tr>
-                    <td>{{ carrera.getId }}</td>
-                    <td>{{ carrera.getName }}</td>
-                    <td>{{ carrera.getCreateAt }}</td>
-                    <td>{{ carrera.getCreateBy.getFullName }}</td>
-                    <td>
-                        <a class="waves-effect waves-teal btn-flat tooltipped" data-position="left" data-tooltip="Editar">
-                            <i class="material-icons">edit</i>
-                        </a>
-                        <a class="waves-effect waves-teal btn-flat tooltipped" data-position="left" data-tooltip="Borrar">
-                            <i class="material-icons">delete_forever</i>
-                        </a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <div id="add_carrera" class="col s12">
-        <div class="row">
-            <form class="col s12" role="form" action="formats/carreras/add" method="post">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">directions_walk</i>
-                        <input id="icon_prefix" type="text" class="validate">
-                        <label for="icon_prefix">Nombre de la carrera</label>
+    <blockquote>
+        <h1>
+            <i class="medium material-icons">directions_run</i>
+            Carreras
+        </h1>
+    </blockquote>
+    {% if rec1.page.notification %}
+        <div id="modal1_notification" class="modal">
+            <div class="modal-content">
+                <h4>¡Bien hecho!</h4>
+                <p>{{ rec1.page.notification }}</p>
+            </div>
+            <div class="modal-footer">
+                <a class="modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
+            </div>
+        </div>
+    {% endif %}
+    <div class="row">
+        <div class="col s12">
+            <ul class="tabs">
+                <li class="tab col s3">
+                    <a class="{% if rec1.page.get_active_action == 'list' %}active {% endif %}tooltipped" href="#list_carrera" data-position="top" data-tooltip="Muestra una lista con las carreras actuales">Lista</a>
+                </li>
+                <li class="tab col s3">
+                    <a class="{% if rec1.page.get_active_action == 'add' %}active {% endif %}tooltipped" href="#add_carrera" data-position="top" data-tooltip="Añade más carreras a lista">Añadir</a>
+                </li>
+            </ul>
+        </div>
+        <div id="list_carrera" class="col s12">
+            <h4 class="cyan-text"><i class="material-icons left small">book</i>Lista de carreras</h4>
+            <hr/>
+            <table class="bordered responsive-table highlight">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Creado el</th>
+                        <th>por</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for carrera in rec1.carreras.list %}
+                        <tr>
+                            <td>{{ carrera.getId }}</td>
+                            <td>{{ carrera.getName }}</td>
+                            <td>{{ carrera.getCreateAt }}</td>
+                            <td>{{ carrera.getCreateBy.getFullName }}</td>
+                            <td>
+                                <a class="waves-effect waves-teal btn-flat tooltipped" data-position="left" data-tooltip="Editar">
+                                    <i class="material-icons">edit</i>
+                                </a>
+                                <a href="formats/carreras/del/{{ carrera.getId }}" class="waves-effect waves-teal btn-flat tooltipped" data-position="left" data-tooltip="Borrar">
+                                    <i class="material-icons">delete_forever</i>
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div id="add_carrera" class="col s12">
+            <div class="row">
+                <form class="col s12" role="form" action="formats/carreras/add" method="post">
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">directions_walk</i>
+                            <input id="icon_prefix" type="text" class="validate" name="new_carrera_name">
+                            <label for="icon_prefix">Nombre de la carrera</label>
+                        </div>
                     </div>
-                </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                    Agregar
-                    <i class="material-icons right">send</i>
-                </button>
-            </form>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">
+                        Agregar
+                        <i class="material-icons right">send</i>
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
